; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_amcmds.c_get_am_type_string.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_amcmds.c_get_am_type_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"INDEX\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"TABLE\00", align 1
@ERROR = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [32 x i8] c"invalid access method type '%c'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8)* @get_am_type_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_am_type_string(i8 signext %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8, align 1
  store i8 %0, i8* %3, align 1
  %4 = load i8, i8* %3, align 1
  %5 = sext i8 %4 to i32
  switch i32 %5, label %8 [
    i32 129, label %6
    i32 128, label %7
  ]

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %12

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %12

8:                                                ; preds = %1
  %9 = load i32, i32* @ERROR, align 4
  %10 = load i8, i8* %3, align 1
  %11 = call i32 @elog(i32 %9, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.2, i64 0, i64 0), i8 signext %10)
  store i8* null, i8** %2, align 8
  br label %12

12:                                               ; preds = %8, %7, %6
  %13 = load i8*, i8** %2, align 8
  ret i8* %13
}

declare dso_local i32 @elog(i32, i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
